css/styles.css
*,
*::before,
*::after {
  box-sizing: inherit;
}

html {
  box-sizing: border-box;
}

body {
  font-size: 14px;
  font-family: 'PT Sans', Arial, sans-serif;
  line-height: 21px;
  font-weight: 400;
  color: #333333;
  text-transform: uppercase;
  background-color: #f2f2f2;
}

a {
  text-decoration: none;
}

.visually-hidden {
  position: absolute;
  clip: rect(0 0 0 0);
  width: 1px;
  height: 1px;
  margin: -1px;
}

.content-wrapper {
  width: 1200px;
  margin: auto;
  background-color: #ffffff;
  box-shadow: 0px 7px 15px 0 rgba(0, 1, 1, 0.15);
}

.content-wrapper-index {
  text-align: center;
}

.content-wrapper-hotels {
  text-align: left;
}

.main-navigation {
  position: relative;
  width: 1200px;
  padding: 0;
  font-weight: 700;
  color: #333333;
  line-height: 26px;
  height: 56px;
}

.main-header-logo {
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
}

.site-navigation {
  display: flex;
  align-items: center;
  width: 1200px;
  list-style: none;
  margin: 0;
  padding: 0;
  height: 56px;
}

.site-navigation>li {
  display: block;
  width: 239px;
  letter-spacing: normal;
  line-height: 10px;
}

.nav-info,
.nav-gallery {
  text-align: left;
}

.nav-housing,
.nav-map {
  text-align: right;
}

.nav-info {
  margin-left: 72px;
}

.nav-gallery {
  margin-left: 2px;
}

.nav-map {
  margin-left: 0px;
}

.nav-housing {
  margin-left: 5px;
  margin-right: 72px
}

.nav-gallery {
  margin-right: auto;
}

.site-navigation a {
  color: #000000;
}

.site-navigation a:hover,
.site-navigation a:focus {
  color: #81b3d2;
}

.site-navigation a:active {
  color: rgba(0, 0, 0, 0.3);
}

.intro-picture {
  width: 1200px;
  height: 508px;
  margin-bottom: 59px;
  background-color: #81b3d2;
  background:
    url("../img/intro-mask.svg") no-repeat 0px 452px,
    url("../img/background-photo.jpg") no-repeat 0px -83px
}

.welcome-text-picture {
  margin-top: 77px;
}

.heading-regular {
  font-size: 21px;
  font-weight: 700;
  color: #000000;
}

.slogan {
  width: 440px;
  height: 48px;
  line-height: 26px;
  margin: auto;
  margin-bottom: 35px;
}

.benefits-intro-text {
  width: 500px;
  margin: auto;
  margin-bottom: 52px;
}

.benefits-item-wrapper {
  width: 1200px;
  min-height: 256px;
  display: flex;
  justify-content: center;
}

.benefits-list {
  width: 1200px;
  list-style: none;
  padding: 0px;
  display: flex;
  flex-wrap: wrap;
}

.benefits-item {
  width: 400px;
  padding-bottom: 15px;
}

.benefit-picture {
  min-height: 256px;
  margin: 0;
  padding: 0;
}

.benefit-backward {
  order: 2;
}

.features-list {
  width: 1200px;
  padding: 0;
  margin-top: 142px;
  margin-bottom: 69px;
  list-style: none;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
}

.features-item {
  width: 400px;
  position: relative;
  padding: 0 57px;
}

.features-icon::after {
  content: "";
}

.housing-icon::after {
  bottom: 128px;
  left: 162px;
  position: absolute;
  width: 75px;
  height: 72px;
  background: url(../img/housing-icon.svg) no-repeat;
}

.eat-icon::after {
  bottom: 130px;
  left: 163px;
  position: absolute;
  width: 74px;
  height: 70px;
  background: url("../img/eat-icon.svg") no-repeat;
}

.souvenirs-icon::after {
  bottom: 128px;
  left: 168px;
  position: absolute;
  width: 64px;
  height: 76px;
  background: url("../img/souvenir-icon.svg") no-repeat;
}

.heading-white {
  font-weight: 700;
  color: #ffffff;
}

.heading-huge {
  width: 305px;
  margin: auto;
  margin-top: 51px;
  margin-bottom: 22px;
  font-size: 30px;
  line-height: 36px;
  font-weight: 700;
  text-align: center;
  color: #000000;
}

.blue-back {
  padding: 24px 48px;
  color: #ffffff;
  background-color: #81b3d2;
}

.grey-back {
  padding: 26px 60px;
  background-color: #eeeeee;
  width: 400px;
  height: 255px;
}

.benefit-heading {
  width: 100%;
  padding: 0 61px;
  margin-bottom: 24px;
}

.benefit-description {
  margin-top: 21px;
}

.blue-back p {
  margin-top: 24px;
}

.button {
  font: inherit;
  font-weight: 700;
  color: #ffffff;
  text-transform: uppercase;
  text-align: center;
  vertical-align: middle;
  background-color: #766357;
  border: none;
}

.button:hover {
  background-color: #604e43;
}

.button:active {
  background-color: #503e33;
  color: rgba(255, 255, 255, 0.3);
}

.button-blue {
  background-color: #81b3d2;
}

.button-blue:hover {
  background-color: #669ec0;
}

.button-blue:active {
  background-color: #5496bd;
}

.search-footer-wrapper {
  width: 1200px;
  position: relative;
}

.map-background {
  width: 1200px;
  height: 593px;
  background-image: url('../img/map.png')
}

.search-intro-text {
  width: 463px;
  line-height: 26px;
  margin: auto;
}

.form-roll-button {
  margin-top: 44px;
  width: 568px;
  height: 86px;
  font-size: 21px;
  font-weight: 700;
  line-height: 26px;
}

.hotel-search-form,
.hotel-search-input {
  font-size: 14px;
  line-height: 26px;
  font-weight: 700;
}

.hotel-search-input {
  box-sizing: border-box;
  width: 346px;
  height: 38px;
  border: 0;
  padding: 0 37px;
  padding-left: 13px;
  text-transform: uppercase;
  background-color: #f2f2f2;
}

.hotel-search-form {
  box-sizing: border-box;
  margin: auto;
  padding: 55px;
  border: 1px;
  width: 568px;
  height: 395px;
  box-shadow: 0px 7px 15px 0 rgba(0, 1, 1, 0.15);
  background-color: #ffffff;
}

.form-items-wrapper {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
}

.form-item {
  margin-bottom: 29px;
  display: flex;
  align-items: center;
}

.hotel-search-input:hover {
  background-color: #ebebeb;
}

.hotel-search-input:focus {
  background-color: #ffffff;
}

.checkin-input-container {
  position: relative;
}

.checkin-input-container>label {
  margin-right: 19px;
}

.checkout-input-container {
  position: relative;
}

.inputs-label {
  margin-right: 15px;
  margin-left: 2px;
}

.checkout-input-label {
  margin-right: 15px;
}

.input-calendar {
  position: absolute;
  right: 7px;
  top: 7px;
  background: none;
  border: none;
  cursor: pointer;
}
/* ... */

